--- a/src/CQRSShop.Service/packages.config
+++ b/src/CQRSShop.Service/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Elasticsearch.Net" version="1.0.0-beta1" targetFramework="net451" />
-  <package id="EventStore.Client" version="3.0.0-rc2" targetFramework="net451" />
+  <package id="EventStore.Client" version="3.8.0" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net451" />
