--- a/src/CQRSShop.Web/packages.config
+++ b/src/CQRSShop.Web/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EventStore.Client" version="3.0.0-rc2" targetFramework="net451" />
+  <package id="EventStore.Client" version="3.8.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
